--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.9.6",
-    "@timmartin2/python-code-analyzer": "0.0.2"
+    "@timmartin2/python-code-analyzer": "^0.0.4"
   },
   "devDependencies": {
-    "@wordpress/scripts": "^8.0.1"
+    "@wordpress/scripts": "^8.0.1",
+    "css-loader": "^3.5.3",
+    "mini-css-extract-plugin": "^0.9.0"
   },
   "scripts": {
-    "build": "wp-scripts build"
+    "build": "wp-scripts build",
+    "lint:js": "wp-scripts lint-js",
+    "start": "wp-scripts start"
   }
 }
