--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "@wordpress/scripts": "^8.0.1",
     "css-loader": "^3.5.3",
-    "mini-css-extract-plugin": "^0.9.0"
+    "mini-css-extract-plugin": "^0.9.0",
+    "wp-prettier": "^2.0.5"
   },
   "scripts": {
     "build": "wp-scripts build",
