--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@wordpress/scripts": "^8.0.1",
     "css-loader": "^3.5.3",
     "mini-css-extract-plugin": "^0.9.0",
-    "wp-prettier": "^2.0.5"
+    "prettier": "npm:wp-prettier@^1.19.1"
   },
   "scripts": {
     "build": "wp-scripts build",
